@@ -1,5 +1,5 @@
 EBUILD calculate-install-2.2.0.0_p20100812-r1.ebuild 516 RMD160 f68ffc6639ef15d4fee8c820e40ed38c25ad0a24 SHA1 5fbc5821ff69b54f7ea946ee1f84684a97c6b4a3 SHA256 71aa21a9bbc33a77fdeae0f9440a994e1bcedf4904afca2c30e32619ed2c7ea8
-EBUILD calculate-install-2.2.0.0_p20100816.ebuild 516 RMD160 b3bf67171dca9ad482717d9d6620c8609c2fa615 SHA1 cf7738246f13b8755736d5a9eeb1903c81b9aeaa SHA256 e1f99fb237c98a71196e5a6a4b40f59f0ee8ea440a47e272a863d109822d6a8c
+EBUILD calculate-install-2.2.0.0_p20100816-r1.ebuild 570 RMD160 ef7df52391e65e319424669d79f958120b5b923f SHA1 4a8dfe21dfc43c69215f15b524bd5608cdef0a6f SHA256 e9c4add96b8443b3a0d1d3a6609743aa3e7c37911fa5e5973763baa26e3bfa1a
 EBUILD calculate-install-2.2.9999.ebuild 540 RMD160 038eb80ed7ab1120e6305cbfe2eca480a48aa1c0 SHA1 0cc13d21f94d71f0e6bb6dce3e8abfa1f2f66a4f SHA256 7f9bd4b0b6c2fa260f2e93c78fdee24b32545dc2a98e19363f4933dcc32d3557
-MISC ChangeLog 1934 RMD160 6146f54eca8b13ad90175d99df349fffaa953e14 SHA1 ae2977a6b2a853a75157b728a601a50bd15432a4 SHA256 fc7f5c689016412be30619e036e51ccba8d307968cdd54fda8f611c61642cf79
+MISC ChangeLog 2164 RMD160 8c91aa8171ad94337e3ca5f8d310a173b012f203 SHA1 53a7a76225e6a1cf4ac0d582c853bb1a447fbf5a SHA256 4b2378ffa2a52a3fc7b12503831ea47bfab686752e61323ec6cc6a2b92e07f9a
 MISC metadata.xml 310 RMD160 769e4f17a9354da6b168b72a5d65d978f65bf6dd SHA1 83aaae376052d69c7327e880cf028ebc0dea608b SHA256 c29d3efc676d8308872920db5223c78469db86ac236b5d45c3ee98ceb8fca846
