@@ -2,6 +2,13 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-install-2.2.0.0_p20100816-r1 (18 Aug 2010)
+
+  18 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-install-2.2.0.0_p20100816.ebuild,
+  +calculate-install-2.2.0.0_p20100816-r1.ebuild:
+  Added depends.
+
 *calculate-install-2.2.0.0_p20100816 (16 Aug 2010)
 
   16 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
